--- a/cms-admin/package.json
+++ b/cms-admin/package.json
@@ -25,11 +25,13 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "lucide-react": "^0.372.0",
+    "mongodb": "^6.5.0",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
+    "recharts": "^2.12.6",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.0",
