--- a/cms-admin/package.json
+++ b/cms-admin/package.json
@@ -20,13 +20,16 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-table": "^8.16.0",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.372.0",
     "mongodb": "^6.5.0",
-    "next": "14.2.2",
+    "next": "^14.2.2",
+    "next-cloudinary": "^6.5.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
